--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Otomanopee One', sans-serif;
   padding-top: 50px;
-  background-color: black;
+  background-color: #092635;
   overflow-x: hidden !important;
   overflow-y: hidden !important;
 }
@@ -83,19 +83,19 @@ body {
 }
 
 .pad-1 {
-  background-color: green;
+  background-color: #1B4242;
 }
 
 .pad-2 {
-  background-color: blue;
+  background-color: #5C8374;
 }
 
 .pad-3 {
-  background-color: red;
+  background-color: #FFC94A;
 }
 
 .pad-4 {
-  background-color: orange;
+  background-color: #9EC8B9;
 }
 
 .pad-5 {
